# 384OS-64

./: LICENSE  Makefile  README.md
384Boot/: Bearmetal_KernelArg.h  KernelArgs.h  Loader.inf  Main.c  TiRBootPkg.dec  TiRBootPkg.dsc
384OS_test/: run-qemu.sh
384OS_test/root/: NvVars  kernel.elf  memmap
384OS_test/root/EFI/BOOT/: BOOTX64.EFI
capsella_lib/: Cargo.toml  build.rs  capsella_memo  cbindgen.toml  ports.c
capsella_lib/include/: test_header.h
capsella_lib/src/: lib.rs
kernel/: AsmMain.asm  define_true_false.h  main.c  newlib_support.c
kernel/args/: memmap.h  memory.h
kernel/driver/: define_use.h
kernel/driver/kbc/: kbc_8042_soc.h  keyboard_8042_soc.c
kernel/driver/localapic/: local_apic.h
kernel/driver/localapic/timer/: l_apic_timer.c  l_apic_timer.h
kernel/driver/serialport/: serialport.c  serialport.h
kernel/gdt/: gdt_func.asm  gdt_func.h  segment.c  segment.h
kernel/idt/: interrupt.c  interrupt.h  interrupt_func.asm
kernel/include/: KernelArg.h
kernel/io/: io.c  io.h
kernel/mem/: memmgr.c  memmgr.h
kernel/paging/: paging.c  paging.h  paging_func.asm
scripts/: CCDownload.sh
