[package]
name = "capsella_lib"
version = "0.1.0"
edition = "2021"
links = "foo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.0"
libc = "0.2"

[build-dependencies]
gcc = "0.3"
cc = "*"

[features]
part = []
simple = []

[lib]
crate-type = ["staticlib"]